@@ -1,3 +1,8 @@
+2006-08-20  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* Topic plugin: fix a bug that prevented it from loading
+	correctly.
+
 2006-08-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* Fix help: It got broken while rearranging the plugin stuff, now it's
